# test-docker-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
odoo_mcp_server/: __init__.py  odoo_client.py  server.py  tools.py
tests/: __init__.py  test_tools.py
